# sbom-analysis

./: .gitignore  Cargo.toml  Context.md  Deployment Context.md  LICENSE  Readme.md  analyze.sh  crates.js  data.md  grype.sarif.json  index.html  out.csv  radar.R  settings.html  source-files.js  stackedBar.R  syft.sarif.json  trivy.sarif.json
scayl/: Cargo.toml  LICENSE  Readme.md  all.html  index.html  macro.cvss_component!.html  macro.cvss_component.html  macro.cvss_score!.html  macro.cvss_score.html  sidebar-items.js
scayl/api/: index.html  sidebar-items.js
scayl/api/nvd/: enum.CveIdError.html  enum.Error.html  index.html  sidebar-items.js  struct.CveId.html  struct.NvdApi.html
scayl/api/vt/: index.html  sidebar-items.js  struct.VtApi.html
scayl/context/: enum.Error.html  enum.FileSystemAccess.html  enum.InformationSensitivity.html  enum.NetworkConfiguration.html  enum.Permissions.html  enum.RemoteAccess.html  index.html  sidebar-items.js  struct.ContextRunner.html  struct.DeploymentContext.html  struct.DeploymentScore.html  struct.ScaylInfo.html  struct.VulnerabilityScore.html  trait.CvssProvider.html
scayl/context/runner/: enum.Error.html  struct.ContextRunner.html
scayl/cvss/: index.html  sidebar-items.js  trait.ComponentFromVector.html  trait.FromVector.html
scayl/cvss/v2_0/: enum.AccessComplexity.html  enum.AccessVector.html  enum.Authentication.html  enum.CollateralDamagePotential.html  enum.Exploitability.html  enum.Impact.html  (+9 more)
scayl/format/: enum.Error.html  enum.VulnFormat.html  fn.read_json.html  index.html  sidebar-items.js  struct.VulnFilter.html  struct.VulnId.html  trait.VulnerabilityFormat.html
scayl/model/: enum.CvssVersion.html  index.html  sidebar-items.js  struct.CvssVector.html  trait.Cvss.html
scayl/src/: lib.rs
scayl/util/: index.html
(+30149 files in other folders)
