[package]
name = "scayl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features=["derive"] }
chrono = { version="0.4.19", features=["serde"] }
serde_json = "1.0.81"
reqwest = "0.11.11"
dotenv = "0.15.0"
tokio = { version ="1.19.2", features=["macros", "rt-multi-thread"] }
futures = "0.3.21"
clap = "3.2.8"