[package]
name = "scayl_bin"
version = "0.1.0"
edition = "2021"
authors = [
    "Dillon Shaffer<dillon@molkars.dev>",
    "Cynthia Rosas",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scayl = { version="0.1.0", path = "scayl" }
serde_json = "1.0.81"
dotenv = "0.15.0"
tokio = { version ="1.19.2", features=["macros", "rt-multi-thread"] }
futures = "0.3.21"
clap = { version="3.2.8", features=["derive"] }
num_cpus = "1.13.1"

[workspace]
members = [
    "scayl"
]