[package]
name = "scayl_lib"
version = "0.1.0"
edition = "2021"
authors = [
    "Dillon Shaffer<dillon@molkars.dev>",
    "Cynthia Rosas",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features=["derive"] }
chrono = { version="0.4.19", features=["serde"] }
serde_json = "1.0.81"
reqwest = "0.11.11"
tokio = { version ="1.19.2", features=["macros", "rt-multi-thread"] }
futures = "0.3.21"
num_cpus = "1.13.1"

[features]
default=["full"]
full = ["grype", "syft", "trivy", "sarif", "nvd"]
grype = []
syft = []
trivy = []
sarif = []
nvd = []